# earthkit-data

./: .cruft.json  .gitignore  .pre-commit-config-weekly.yaml  .pre-commit-config.yaml  .readthedocs.yml  =  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  Untitled.ipynb  conftest.py  environment-minver.yml  environment-tests.yml  environment.yml  pyproject.toml  pytest.ini  setup.cfg
.github/: ci-config.yml  ci-hpc-config.yml  ci-hpc-gpu-config.yml  cruft-update-template.md
.github/workflows/: cd-pypi.yml  ci.yml  ci_ori.yml  ci_other.yml  label-public-pr.yml  legacy-ci.yml  nightly-hpc-gpu.yml  notify-new-issue.yml  notify-new-pr.yml  notify_ci.yml  notify_new_pr.yml  on-push.yml  python-pull-request.yml  weekly.yaml
ci/: environment-ci.yml  environment-integration.yml
docs/: api-reference.rst  api.rst  cfgrib_migration_guide.md  conf.py  contributing.rst  deprecations.rst  development.rst  earthkit-packages.yml  examples.rst  faq.rst  getting-started.rst  howtos.rst  index.md  index.rst  install.rst  licence.rst  requirements.txt  skip_api_rules.py
docs/_static/: custom.js  style.css
docs/development/: conda.rst  index.rst  tests.rst
docs/examples/: Untitled.ipynb  ads.ipynb  bufr.ipynb  bufr_synop.ipynb  bufr_temp.ipynb  cache.ipynb  cds.ipynb  config.ipynb  config_env_vars.ipynb  data_from_stream.ipynb  decorator-examples.ipynb  demo_sources_plugin.ipynb  directory_with_sql_index.ipynb  ecmwf_open_data.ipynb  fdb.ipynb  fdb_stream.ipynb  fields_from_dict_in_loop.ipynb  file_parts.ipynb  file_stream.ipynb  file_target.ipynb  files.ipynb  from_object.ipynb  geojson_geopandas.ipynb  geotiff.ipynb  grib_array_backends.ipynb  grib_basics.ipynb  grib_contents.ipynb  grib_cube.ipynb  grib_encoder.ipynb  grib_fdb_stream.ipynb  grib_fdb_write.ipynb  grib_file_parts.ipynb  grib_file_pattern.ipynb  grib_filter.ipynb  grib_from_stream.ipynb  grib_indexing.ipynb  grib_inspect_contents.ipynb  grib_lat_lon_value.ipynb  grib_lat_lon_value_ll.ipynb  grib_lat_lon_value_rgg.ipynb  (+90 more)
docs/experimental/: Untitled.ipynb  climate_dt_healpix_to_netcdf.ipynb  ekd_test_on_cds_era5_single_level.ipynb  grib_tensor.ipynb  in_memory.ipynb  meteo_swiss_genheight.ipynb  mixed_pl_ml.ipynb  ml.ipynb  monthly.ipynb  multi_soil_sfc.ipynb  open_in_xarray.ipynb  options.ipynb  pl.ipynb  pl_an_fc.ipynb  pl_sfc.ipynb  profiles.ipynb  reduced_gg.ipynb  reforecast.ipynb  schema  seasonal.ipynb  sfc.ipynb  split.ipynb  target_basic.ipynb  target_fdb_grib.ipynb  target_file_grib.ipynb  target_file_png.ipynb  to_fieldlist.ipynb  xarray_engine_first_proto.ipynb
docs/explanations/: caching.rst  config.rst  data.rst  encoders.rst  index.rst  sources.rst
docs/guide/: caching.rst  config.rst  data.rst  data_access.rst  encoders.rst  from_object.rst  grib.rst  index.rst  settings.rst  sources.rst  streams.rst  targets.rst
docs/how-tos/: NUTS_RG_20M_2021_3035.geojson  _from_pytroch.grib  _from_xr_1a.grib  _from_xr_2.grib  _modified_field.grib  _pt_from_loop.grib  _pt_single.grib  _res_encoded.grib  _res_pattern_t_1000.grib  _res_pattern_t_300.grib  _res_pattern_t_400.grib  _res_pattern_t_500.grib  _res_pattern_t_700.grib  _res_pattern_t_850.grib  _res_pattern_u_1000.grib  _res_pattern_u_300.grib  _res_pattern_u_400.grib  _res_pattern_u_500.grib  _res_pattern_u_700.grib  _res_pattern_u_850.grib  _res_pattern_v_1000.grib  _res_pattern_v_300.grib  _res_pattern_v_400.grib  _res_pattern_v_500.grib  _res_pattern_v_700.grib  _res_pattern_v_850.grib  _res_t.grib  _test.db  _tuv_pl_2.nc  _tuv_pl_3.nc  tuv.tiff
docs/plugins/: encoder_plugin.rst  index.rst  plugins.rst  sources_plugin.rst  target_plugin.rst
docs/release-notes/: deprecations.rst  index.rst  version_0.12_updates.rst  version_0.14_updates.rst  version_0.15_updates.rst  version_0.16_updates.rst  version_0.18_updates.rst
docs/release_notes/: deprecations.rst  deprecations_1.rst  index.rst  version_0.10_updates.rst  version_0.11_updates.rst  version_0.12_updates.rst  version_0.13_updates.rst  version_0.14_updates.rst  version_0.15_updates.rst  version_0.16_updates.rst  version_0.17_updates.rst  version_0.18_updates.rst  version_0.19_updates.rst  version_0.1_updates.rst  version_0.20_update.rst  version_0.20_updates.rst  version_0.2_updates.rst  version_0.3_updates.rst  version_0.4_updates.rst  version_0.5_updates.rst  version_0.6_updates.rst  version_0.7_updates.rst  version_0.8_updates.rst  version_0.9_updates.rst
docs/source/: api-reference.rst  api.rst  autodocs_skip_elements.yml  clean_autodocs.py  conf.py  earthkit-packages.yml  earthkit_packages.py  faq.rst  getting-started.rst  index.rst  installation.rst  licence.rst  skip_api_rules.py  why.rst
docs_1/: Makefile
docs_1/source/: api-reference.rst  api.rst  clean_autodocs.py  conf.py  faqs.rst  index.rst  requirements.txt  skip_api_rules.py
earthkit/data/: __init__.py  decorators.py  input_manager.py  samples.py  testing.py
emohawk/: __init__.py  __meta__.py  decorators.py  input_manager.py  testing.py
emohawk/arguments/: argument.py  emohawk_types.py  transformers.py
emohawk/core/: __init__.py  caching.py  index.py  ipython.py  plugins.py  settings.py
emohawk/mergers/: __init__.py
emohawk/mirrors/: __init__.py  directory_mirror.py
emohawk/readers/: __init__.py  archive.py  bufr.py  csv.py  directory.py  grib.py  json.py  netcdf.py  shapefile.py  zip.py
emohawk/sources/: __init__.py  directory.py  dummy_source.py  fdb.py  file.py  file_pattern.py  indexed.py  list_of_dicts.py  memory.py  multi.py  multi_url.py  stream.py  stream_iter.py  url.py  url_pattern.py  virtual.py  virtual_directory.py
emohawk/utils/: __init__.py  availability.py  bbox.py  conventions.py  dates.py  html.py  lazy.py  parts.py  summary.py
emohawk/vocabularies/: cf.py  (+3 more)
notebooks/: cmip6.ipynb  csv_reader.ipynb  demo.ipynb  satellite-aerosol.ipynb  satellite-srb.ipynb  zip_reader.ipynb
teal/: README.rst  __init__.py  config.py  pytest.ini  setup.py
tests/: conftest.py  downstream-ci-requirements.txt  environment-unit-tests.yml  test_00_version.py  test_10_reader_csv.py  test_10_reader_zip.py
(+1931 files in other folders)
