[metadata]
name = earthkit-data
license = Apache License 2.0
description = A format-agnostic Python interface for geospatial data
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering
long_description_content_type=text/markdown
long_description = file: README.md
test_suite = tests

[options]
packages = find_namespace:
install_requires =
    cdsapi
    cfgrib>=0.9.10.1
    eccodes>=1.5.0
    ecmwf-api-client>=1.6.1
    ecmwf-opendata>=0.1.2
    polytope-client>=0.7.1
    dask
    entrypoints
    filelock
    hda
    jinja2
    markdown
    multiurl
    netcdf4
    pdbufr>=0.11.0
    pyfdb
    pyodc
    pyyaml
    tqdm
    xarray>=0.19.0

[options.packages.find]
include = earthkit.*

[options.extras_require]
test =
    pytest
    pytest-cov
    pytest-forked
    pytest-timeout

[flake8]
max-line-length = 110
extend-ignore = E203, W503

[mypy]
strict = False
ignore_missing_imports = True
