[metadata]
name = earthkit-data
license = Apache License 2.0
description = A format-agnostic Python interface for geospatial data
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering
long_description_content_type=text/markdown
long_description = file: README.md
test_suite = tests

[options]
packages = find_namespace:
install_requires =
    cdsapi
    eccodes>=1.7.0
    cfgrib>=0.9.10.1
    ecmwf-api-client>=1.6.1
    ecmwf-opendata>=0.3.3
    polytope-client>=0.7.2
    dask
    entrypoints
    filelock
    hda
    jinja2
    markdown
    multiurl
    netcdf4
    pdbufr>=0.11.0
    pyfdb
    pyodc
    pyyaml
    scipy
    tqdm
    xarray>=0.19.0
    earthkit-meteo>=0.0.1
    aws-requests-auth
    eccovjson>=0.0.5
include_package_data = True

[options.packages.find]
include = earthkit.*

[options.extras_require]
test =
    pytest
    pytest-cov
    pytest-forked
    pytest-timeout
    nbformat
    nbconvert

[flake8]
max-line-length = 110
extend-ignore = E203, W503

[mypy]
strict = False
ignore_missing_imports = True
