[metadata]
name = earthkit-data
license = Apache License 2.0
description = A format-agnostic Python interface for geospatial data
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering
long_description_content_type=text/markdown
long_description = file: README.md
test_suite = tests

[options]
packages = find_namespace:
install_requires =
    cfgrib>=0.9.10.1
    eccodes>=1.7.0
    dask
    entrypoints
    filelock
    jinja2
    markdown
    multiurl>=0.3.0
    netcdf4
    pandas
    pyyaml
    tqdm>=4.63.0
    xarray>=0.19.0
    earthkit-meteo>=0.0.1
    earthkit-geo
include_package_data = True

[options.packages.find]
include = earthkit.*

[options.extras_require]
mars = ecmwf-api-client>=1.6.1
cds = cdsapi
fdb = pyfdb
polytope = polytope-client>=0.7.2
wekeo = hda
ecmwf-opendata = ecmwf-opendata>=0.3.3
odb = pyodc
bufr = pdbufr>=0.11.0
projection = cartopy
geopandas = geopandas
eccovjson = eccovjson>=0.0.5
s3 = aws-requests-auth
all =
    earthkit-data[mars]
    earthkit-data[cds]
    earthkit-data[ecmwf-opendata]
    earthkit-data[fdb]
    earthkit-data[polytope]
    earthkit-data[wekeo]
    earthkit-data[odb]
    earthkit-data[bufr]
    earthkit-data[projection]
    earthkit-data[geopandas]
    earthkit-data[eccovjson]
test =
    earthkit-data[all]
    pytest
    pytest-cov
    pytest-forked
    pytest-timeout
    nbformat
    nbconvert

[flake8]
max-line-length = 110
extend-ignore = E203, W503

[mypy]
strict = False
ignore_missing_imports = True
